[metadata]
name = domains-counter-api
version = 1.0.0

[options]
packages = find:
install_requires =
    aiohttp==3.8.5
    toml==0.10.0
    tldextract==2.2.2
    aioredis==1.3.1
    jsonschema==3.2.0
tests_require =
    pytest
setup_requires =
    pytest-runner

[aliases]
test=pytest

[options.entry_points]
console_scripts =
   serve = domains_counter_api.server:main

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
